syntax = "proto3";
import "shared.proto";
package proto;
option go_package = "/;proto";

message SayHelloRequest {
    CommonValues values = 1;
    string yourName = 2;
    int64 int64Value = 3;
    bool boolValue = 4;
    double float64Value = 5;
    uint64 uint64Value = 6;
    repeated string stringList = 7;
    repeated int64 int64List = 8;
    repeated bool boolList = 9;
    repeated double doubleList = 10;
    repeated uint64 uint64List = 11;
}

message SayHelloResponse {
    string message = 1;
}

message TestJsonRequest {
}

message TestJsonResponse {
}

service TestService {
    rpc sayHello (SayHelloRequest) returns (SayHelloResponse) {}
    rpc testJson (TestJsonRequest) returns (TestJsonResponse) {}
}

message EatRequest {
    string food = 1;
}

message EatResponse {
    string message = 1;
}

service MinionsService {
    rpc eat (EatRequest) returns (EatResponse) {}
}
